--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Pedro Navarro
 Maintainer: Pedro Navarro <pnavarro@uni-mainz.de>
 Description: More about what it does (maybe more than one line)
 Depends:
-    R (>= 3.1.0),hash,SDMTools,RColorBrewer,
+    R (>= 3.2.5),hash,SDMTools,RColorBrewer,
     dplyr,tidyr,ggplot2,readxl,classInt,
     scales,pander,GGally,tools,readr
 Imports:
@@ -26,3 +26,6 @@ Suggests:
     rmarkdown
 License: What license is it under?
 LazyData: TRUE
+VignetteBuilder: knitr
+RoxygenNote: 5.0.1
+
