load data for modeling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(contingencyTable)
 export(countCharOccurrences)
 export(get.training.sample)
 export(initConfiguration)
+export(load_data_modeling)
 export(merge_omics)
 export(mkdir)
 export(predictNeoEpitopes)
