machine learning pipeline (MLpipeline) completed (version 1).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,14 @@
 export(changeConfiguration)
 export(contingencyTable)
 export(countCharOccurrences)
+export(evaluate_ML)
 export(get_training_sample)
 export(initConfiguration)
 export(load_data_modeling)
 export(merge_omics)
 export(mkdir)
 export(predictNeoEpitopes)
-export(prelim.ML)
+export(prelim_ML)
 export(prepare_data_modeling)
 export(proteomics.select.condition)
 export(read_batch_in_folder)
